--- a/scide.tex
+++ b/scide.tex
@@ -164,10 +164,9 @@ information like CPU utilization, number of running synths, groups, synthdefs et
 Our guidelines in interaction design were to minimize the amount of constantly visible controls, so as not to clutter
 the GUI, but to make the most used functionality quickly accessible via keyboard shortcuts, and advanced features easily
 discoverable via the main menu and \emph{context menus} - i.e. menus that pop up when right-clicking (or Ctrl-clicking)
-on a GUI element and offer a choice of actions relevant for that element.
-
-To combine accessibility and discoverability the following rule is applied: as much functionality as possible is
-in the main menu, and each item in any menu may be assigned a shortcut.
+on a GUI element and offer a choice of actions relevant for that element. To combine accessibility and discoverability
+the following rule is applied: as much functionality as possible is in the main menu, and each item in any menu may be
+assigned a shortcut.
 
 We distribute the IDE with a large set of default shortcuts that cover most frequently used functionality by both
 SuperCollider beginners and experts, and try to adhere to shortcuts in other coding environments.
@@ -404,20 +403,16 @@ offers appropriate assistance.
 
 Once the assistance is invoked, the name of the current argument being typed is highlighted, which
 is of great help when the number of arguments is large, or the expression for an argument is very
-long.
-
-Moreover, one can quickly insert and cycle through available argument names with a press of the Tab
+long. Moreover, one can quickly insert and cycle through available argument names with a press of the Tab
 key, in order to realize argument addressing by name, as in:
 
 \verb|SinOsc.ar(456, add: 1, mul:|
 
-Once assistance has been activated for a particular method call, it remains active in the
-background while assistance for a nested method call is being performed: when the user
-finishes typing the inner call, assistance is automatically displayed for the outer call again.
-
-This is especially useful in case assistance is based on explicit class selection (as explained
-above) - the selection is remembered during nested assistances so that method disambiguation does
-not need to be repeated.
+Once assistance has been activated for a particular method call, it remains active in the background while assistance
+for a nested method call is being performed: when the user finishes typing the inner call, assistance is automatically
+displayed for the outer call again. This is especially useful in case assistance is based on explicit class selection
+(as explained above) - the selection is remembered during nested assistances so that method disambiguation does not need
+to be repeated.
 
 As can be seen from examples above, this assistance would also benefit from increased ability to
 automatically infer classes from text. Nevertheless, the described solution via explicit class
@@ -462,16 +457,12 @@ SuperCollider IDE attempts to exploit these capabilities in most practical ways.
 will pop up a dialog that lists all methods whose name matches the text under cursor, or all methods
 of the class under cursor. Pressing Return on an entry will open the file at position where the
 selected method or class is implemented. The same dialog contains a search field which can be used
-to search for any class or method.
-
-An equivalent dialog is implemented also for class and method references: the listing contains
-all methods that contain references to another class or method.
+to search for any class or method. An equivalent dialog is implemented also for class and method references:
+the listing contains all methods that contain references to another class or method.
 
 The shortcuts and menu actions that bring up these dialogs work just as well in the code editor,
 as in any other GUI element that may contain code: the command line, the post window, and the help
-browser.
-
-Moreover, invoking help-related shortcuts within these dialogs will navigate the help browser to the
+browser. Moreover, invoking help-related shortcuts within these dialogs will navigate the help browser to the
 help page related to the class or method selected in the dialog. Help and class library navigation
 are thus very efficiently linked.
 
@@ -504,13 +495,9 @@ displayed in the help browser.
 The help system is tightly connected to many GUI components: the help shortcut will recall a relevant help document
 for the text under cursor, when it is invoked within the code editor, the command line, the post window, the help
 browser itself, or - as noted above - for the selected entry in the class and method implementation and reference
-dialogs.
-
-Example code in help documents may also be evaluated. Another benefit of integration with the IDE is that the shortcut
-for evaluation is identical to the one in the code editor, even when customized by the user.
-
-Moreover, the same shortcuts as in other GUI components may be used for class library lookup (see section
-\ref{class-lib-lookup}).
+dialogs. Example code in help documents may also be evaluated. Another benefit of integration with the IDE is that the
+shortcut for evaluation is identical to the one in the code editor, even when customized by the user. Moreover, the same
+shortcuts as in other GUI components may be used for class library lookup (see section \ref{class-lib-lookup}).
 
 \section{Sessions}
 
@@ -535,18 +522,15 @@ configuration file. There is also a handy menu action to open the SuperCollider 
 
 SuperCollider IDE has successfully reached the fundamental goal of providing a cross-platform SuperCollider coding
 environment. Not only has it integrated the individual strengths of previous coding environments, but it has brought
-important improvements on its own. It makes SuperCollider more accessible to new users, eases education and exchange of
-knowledge, as well as focuses future development work.
-
-Immediate benefits arise from a unified experience across Linux, Mac OS X and Windows. Furthermore, sophisticated user
-interface design and advanced code development assistance make it both easier to use by novices and a powerful tool for
-experienced users and developers.
+important improvements on its own. Immediate benefits arise from a unified experience across Linux, Mac OS X and
+Windows. Furthermore, sophisticated user interface design and advanced coding assistance make it both easy
+to use by novices and a powerful tool for experienced users and developers. In consequence, it makes SuperCollider
+as a whole more accessible, eases its education and exchange of knowledge, as well as focuses future development work.
 
 As described above, possibilities for improvements have been detected especially at automatic code indentation
 (\ref{auto-indentation}) and completion (\ref{auto-completion}), and method call assistance
-(\ref{method-call-assistance}), and are simply a matter of further work.
-
-There are many ideas for future development:
+(\ref{method-call-assistance}), and are simply a matter of further work. Aside from that, there are many ideas for
+future development:
 
 \paragraph{SCDoc Editing Support} \hfill
 
